sonar properties add

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.verbose=true
 sonar.organization=sandy01-key
 sonar.projectKey=sandy01-key_sandymytrend
-sonar.projectName=sandymytren
+sonar.projectName=sandymytrend
 sonar.language=java
 sonar.sourceEncoding=UTF-8
 sonar.source=.
