--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.verbose=true
-sonar.organization=sandy01-key
+sonar.organization=sandy01
 sonar.projectKey=sandy01-key_sandymytrend
 sonar.projectName=sandymytrend
 sonar.language=java
