--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectKey=sandy01-key_sandymytrend
 sonar.projectName=sandymytrend
 sonar.language=java
 sonar.sourceEncoding=UTF-8
-sonar.source=.
+sonar.source=main/java
 sonar.java.binaries=target/classes
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 
