changes to properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,10 @@
 sonar.verbose=true
-sonar.organization=sandy01
+sonar.organization=sandy01-key
 sonar.projectKey=sandy01-key_sandymytrend
 sonar.projectName=sandymytrend
 sonar.language=java
 sonar.sourceEncoding=UTF-8
-sonar.source=main/java
+sonar.sources=.
 sonar.java.binaries=target/classes
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 
